resources/scss/app.scss
/* ... */
section#home-hero {
    padding-top: 180px;

    h1 {
        text-align: center;
        font-size: 180px;
        line-height: 0.71;
        letter-spacing: 3.5px;
        position: relative;
        z-index: 2;

        >span {
            font-family: "Felidae", sans-serif;
            font-weight: 400;
            text-transform: uppercase;
            font-size: inherit;
            line-height: inherit;
        }

        strong {
            display: block;
            letter-spacing: -5.5px;

            >span {
                font-family: "Arsenica Trial Bold", sans-serif;
                font-size: 155px;
                font-weight: 700;
                text-transform: uppercase;
                text-transform: uppercase;
            }
        }
    }

    ul {
        display: flex;
        justify-content: center;
        align-items: center;
        position: relative;
        width: 100%;
        height: 575px; // колкото е средното (3) изображение
        width: 1200px;
        margin: 0 auto;
        margin-top: -140px;

        li {
            position: absolute;

            &:nth-child(1) {
                left: -5px;
                top: calc(50% + 62px);
                transform: translateY(-50%);
                z-index: 3;
            }

            &:nth-child(2) {
                left: 181px;
                top: 50%;
                transform: translateY(-50%);
                z-index: 2;
            }

            &:nth-child(3) {
                top: 0;
                left: 50%;
                transform: translateX(-50%);
                z-index: 1;
            }

            &:nth-child(4) {
                z-index: 2;
                right: 181px;
                top: calc(50% + 100px);
                transform: translateY(-50%);
            }

            &:nth-child(5) {
                right: 22px;
                top: calc(50% + 59px);
                transform: translateY(-50%);
                z-index: 3;
            }
        }
    }
}

section#home-professional {
    padding-top: 158px;
    padding-bottom: 230px;

    h2,
    h2 span {
        font-family: "Century Gothic", sans-serif;
        font-weight: 400;
        font-size: 24.5px;
        text-align: center;
    }

    h2 {
        margin-bottom: 33px;

    }

    >ul {
        display: flex;
        justify-content: center;
        gap: 55px;
        margin-bottom: 125px;

        li {
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: flex-start;
            width: 110px;

            img {
                display: block;
                height: 86px;
                object-fit: contain;
                margin-bottom: 3px;
            }

            span {
                display: block;
                text-align: center;
                font-family: "Prosto One", sans-serif;
                font-size: 23px;
                line-height: 1;
            }
        }
    }

    p {
        font-family: "Century Gothic", sans-serif;
        font-size: 20px;
        text-align: center;
        max-width: 800px;
        margin: 0 auto;
        line-height: 1.6;
        margin-bottom: 72px;
    }

    .author {
        width: 304px;
        height: 419px;
        position: relative;
        margin: 0 auto;

        >img {
            width: 100%;
            height: 100%;
            object-fit: contain;
            display: block;
        }

        ul {
            position: absolute;
            bottom: -100px;
            left: 50%;
            transform: translateX(-50%);
            display: flex;
            align-items: center;
            gap: 10px;
        }
    }
}

section#home-frame {
    height: 800px;
    background-image: url('../../public/images/home/frame-bg.jpg');
    background-position: center;
    background-repeat: no-repeat;
    padding-top: 27px;


    h2,
    h2 span {
        font-family: "Arsenica Trial DemiBold", sans-serif;
        font-weight: 500;
        font-size: 86px;
        text-align: center;
        color: #fff;
    }

    h2 {
        margin-bottom: 40px;

    }

    .picture {
        width: 545px;
        margin: 0 auto;
        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.1));

        .top {
            height: 450px;
            border: 20px solid #fff;
        }

        .bottom {
            background-color: #fff;
            padding: 35px;
            padding-top: 8px;
            margin-top: -2px;

            p {
                text-align: center;
                line-height: 2.2;
                font-size: 16px;
                font-family: "Century Gothic", sans-serif;
            }
        }
    }
}

section#home-gallery {
    padding-top: 135px;

    .row {
        max-width: 1504px;
        width: 100%;
        margin: 0 auto;
        display: flex;
        align-items: flex-start;
        gap: 20px;

        ul.col {
            display: flex;
            flex-direction: column;
            gap: 20px;
            flex: 1;

            li {
                width: 100%;

                img {
                    display: block;
                    width: 100%;
                }
            }

            &:nth-child(2) {
                padding-top: 165px;
            }

            &:nth-child(3) {
                padding-top: 65px;
            }
        }
    }
}
/* ... */

